# chat

./: .gitignore  ADVANCED_ENTERPRISE_FEATURES.md  CMakeLists.txt  Dockerfile.gateway  Dockerfile.services  ENTERPRISE_ENHANCEMENTS.md  ENTERPRISE_FEATURES.md  FINAL_ENTERPRISE_FEATURES.md  README.md  build_enterprise.sh  close_public_access.sh  cloud_security_guide.md  convert_to_simplified.sh  diagnose.sh  diagnose_network.sh  docker-compose.enterprise.yml  docker-compose.yml  find_id_guide.md  fix_remaining_traditional.sh  install_micro_deps.sh  install_nodejs.sh  push_to_github.sh  setup_firewall.sh
deploy/: OPERATIONS.md  deploy.sh  init.sql  monitor.sh  prometheus.yml  test.sh
deploy/grafana/dashboards/: chat-system.json
deploy/k8s/: configmap.yaml  gateway-deployment.yaml  services-deployment.yaml
include/server/: chatservice.hpp  web_controller.hpp
include/server/model/: groupmodel.hpp  usermodel.hpp
microservices/: CMakeLists.txt
microservices/common/: CMakeLists.txt
microservices/common/auth/: AuthManager.cpp  AuthManager.h
microservices/common/circuit/: CircuitBreaker.cpp  CircuitBreaker.h  CircuitBreakerManager.cpp  CircuitBreakerManager.h
microservices/common/config/: ConfigManager.cpp  ConfigManager.h
microservices/common/consul/: ConsulClient.cpp  ConsulClient.h
microservices/common/db/: ConnectionPool.cpp  ConnectionPool.h  Db.cpp  Db.h
microservices/common/discovery/: ServiceDiscovery.cpp  ServiceDiscovery.h
microservices/common/examples/: AdvancedFeaturesExample.cpp  EnterpriseFeaturesExample.cpp
microservices/common/jwt/: JwtValidator.cpp  JwtValidator.h
microservices/common/logging/: Logger.cpp  Logger.h
microservices/common/metrics/: MetricsCollector.cpp  MetricsCollector.h
microservices/common/observability/: ObservabilityManager.cpp  ObservabilityManager.h
microservices/common/retry/: RetryManager.cpp  RetryManager.h
microservices/common/security/: TlsIntegration.cpp  TlsIntegration.h  TlsManager.cpp  TlsManager.h
microservices/common/tracing/: Tracer.cpp  Tracer.h
microservices/gateway/: CMakeLists.txt
microservices/gateway/src/: main.cpp
microservices/message_service/: CMakeLists.txt
microservices/message_service/include/: MessageServiceImpl.h
microservices/message_service/src/: MessageServiceImpl.cpp  main.cpp
microservices/proto/: CMakeLists.txt  common.proto  message_service.proto  social_service.proto  user_service.proto
microservices/social_service/: CMakeLists.txt
microservices/social_service/include/: SocialServiceImpl.h
microservices/social_service/src/: SocialServiceImpl.cpp  main.cpp
microservices/user_service/: CMakeLists.txt
microservices/user_service/include/: UserServiceImpl.h
microservices/user_service/src/: UserServiceImpl.cpp  main.cpp
src/: CMakeLists.txt
src/server/: web_controller.cpp  web_server.cpp  web_server_minimal.cpp
src/server/model/: groupmodel.cpp  usermodel.cpp
src/services/: CMakeLists.txt  message_service.cpp
test/: web_api_doc.md
web/: README.md  package.json  start.sh
